# Demo

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lzlbuilder/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lzlbuilder/demo/: MainActivity.java
cdemo/: build.gradle
cdemo/src/androidTest/java/com/lzlbuilder/cdemo/: ExampleInstrumentedTest.java
cdemo/src/main/: AndroidManifest.xml  CMakeLists.txt
cdemo/src/main/c/: native_lib.cpp
cdemo/src/main/c/jni_common/: jni_ref.h  jni_tips  jni_wrapper.cpp  jni_wrapper.h  readme
cdemo/src/main/java/com/lzlbuilder/cdemo/: TestNative.java
cdemo/src/test/java/com/lzlbuilder/cdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
